--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Huda Academy - Excellence in Education</title>
+    <link rel="icon" href="hudhalogo.png" type="image/png">
+
+<!-- Primary Meta Tags -->
+<title>HUDA ACADEMY</title>
+<meta name="title" content="Huda Academy">
+<meta name="description" content="تعلیم کے ذریعے روشن مستقبل.">
+
+<!-- Open Graph / Facebook / WhatsApp -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://hudha.netlify.app/">
+<meta property="og:title" content="Huda Academy">
+<meta property="og:description" content="تعلیم کے ذریعے روشن مستقبل.">
+<meta property="og:image" content="https://hudha.netlify.app/hudalogo.png">
+<meta property="og:image:alt" content="Huda Academy Logo">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://hudha.netlify.app/">
+<meta property="twitter:title" content="Huda Academy">
+<meta property="twitter:description" content="تعلیم کے ذریعے روشن مستقبل.">
+<meta property="twitter:image" content="https://hudha.netlify.app/hudhalogo.png">
+
     
     <!-- Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -902,3 +923,4 @@
     </script>
 </body>
 </html>
+
