--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
         <nav class="navbar">
             <!-- Logo and Brand -->
             <div class="logo-container">
-                <img src="https://quaf.me/logo.png" alt="Huda Academy Logo" class="logo-image" onerror="this.style.display='none'">
+                <img src="hudhalogo.png" alt="Huda Academy Logo" class="logo-image" onerror="this.style.display='none'">
                 <div class="brand-text">
                     <h1 class="brand-title">Huda Academy</h1>
                     <span class="brand-motto urdu-text">تعلیم کے ذریعے روشن مستقبل</span>
@@ -923,4 +923,5 @@
     </script>
 </body>
 </html>
+
 
