--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:url" content="https://hudha.netlify.app/">
 <meta property="og:title" content="Huda Academy">
 <meta property="og:description" content="تعلیم کے ذریعے روشن مستقبل.">
-<meta property="og:image" content="https://hudha.netlify.app/hudalogo.png">
+<meta property="og:image" content="https://hudha.netlify.app/banner.jpg">
 <meta property="og:image:alt" content="Huda Academy Logo">
 
 <!-- Twitter -->
@@ -23,7 +23,7 @@
 <meta property="twitter:url" content="https://hudha.netlify.app/">
 <meta property="twitter:title" content="Huda Academy">
 <meta property="twitter:description" content="تعلیم کے ذریعے روشن مستقبل.">
-<meta property="twitter:image" content="https://hudha.netlify.app/hudhalogo.png">
+<meta property="twitter:image" content="https://hudha.netlify.app/banner.jpg">
 
     
     <!-- Tailwind CSS -->
@@ -627,7 +627,7 @@
         <nav class="navbar">
             <!-- Logo and Brand -->
             <div class="logo-container">
-                <img src="hudhalogo.png" alt="Huda Academy Logo" class="logo-image" onerror="this.style.display='none'">
+                <img src="hudalogo.png" alt="Huda Academy Logo" class="logo-image" onerror="this.style.display='none'">
                 <div class="brand-text">
                     <h1 class="brand-title">Huda Academy</h1>
                     <span class="brand-motto urdu-text">تعلیم کے ذریعے روشن مستقبل</span>
@@ -923,5 +923,6 @@
     </script>
 </body>
 </html>
+
 
 
