--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
             <p class="hero-subtitle">
                 Empowering Minds, Shaping Futures - Excellence in Education for a Brighter Tomorrow
             </p>
-            <a href="huda.html" class="cta-button">
+            <a href="https://hudha.netlify.app/huda#signup" class="cta-button">
                 <i class="fas fa-user-plus"></i>
                 Register Now
             </a>
@@ -764,7 +764,7 @@
                 Join thousands of students who have transformed their lives through quality education at Huda Academy.
             </p>
             <div class="cta-actions">
-                <a href="#register" class="cta-button">
+                <a href="https://hudha.netlify.app/huda#signup" class="cta-button">
                     <i class="fas fa-user-plus"></i>
                     Register Now
                 </a>
@@ -923,6 +923,7 @@
     </script>
 </body>
 </html>
+
 
 
 
