--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="https://quaf.me/logo.png" alt="Huda Academy Logo" onerror="this.style.display='none'">
+                <img src="hudalogo.png" alt="Huda Academy Logo" onerror="this.style.display='none'">
                 <h4 class="footer-title">Huda Academy</h4>
             </div>
             <p class="footer-description">Excellence in Education - Empowering Minds, Shaping Futures</p>
@@ -923,6 +923,7 @@
     </script>
 </body>
 </html>
+
 
 
 
