--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="icon" href="hudhalogo.png" type="image/png">
+    <link rel="icon" href="hudalogo.png" type="image/png">
 
 <!-- Primary Meta Tags -->
 <title>HUDA ACADEMY</title>
@@ -923,6 +923,7 @@
     </script>
 </body>
 </html>
+
 
 
 
