--- a/huda.html
+++ b/huda.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huda Academy</title>
-    <link rel="icon" href="https://hudha.netlify.app/hudalogo.png" type="image/png">
-    
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_32x32.png">
     <!-- Primary Meta Tags -->
     <meta name="title" content="Huda Academy">
     <meta name="description" content="تعلیم کے ذریعے روشن مستقبل.">
@@ -779,3 +778,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
