--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon32x32.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 
 <!-- Primary Meta Tags -->
 <title>HUDA ACADEMY</title>
@@ -923,6 +925,7 @@
     </script>
 </body>
 </html>
+
 
 
 
